📚 Auto-update: News data refreshed - 2026-01-02 10:12 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -35966,5 +35966,85 @@
         "published": "Fri, 02 Jan 2026 06:48:32 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46462108\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/news/852570/spacex-will-lower-starlink-satellites-to-reduce-collision-risk",
+        "title": "SpaceX will lower Starlink satellites to reduce collision risk",
+        "link": "https://www.theverge.com/news/852570/spacex-will-lower-starlink-satellites-to-reduce-collision-risk",
+        "published": "2026-01-02T04:52:07-05:00",
+        "source": "The Verge",
+        "summary": "After one of its Starlink satellites exploded and another narrowly avoided colliding with a Chinese satellite, SpaceX says it will lower the orbit of thousands of Starlink satellites to increase safety. Of the over 9,000 Starlink satellites currently operating in low Earth orbit, SpaceX says it'll lower about 4,400 from 550km above the Earth's surface [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/what-is-super-flu-spreading-in-united-states-europe/",
+        "title": "What Is the \u2018Super Flu\u2019 That Is Spreading in Europe and the United States?",
+        "link": "https://www.wired.com/story/what-is-super-flu-spreading-in-united-states-europe/",
+        "published": "Fri, 02 Jan 2026 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The \u201csuper flu\u201d behind outbreaks in the US and UK is a new variant of influenza A H3N2, subclade K. Existing vaccines appear to be insufficiently effective against the virus."
+    },
+    {
+        "id": "https://www.engadget.com/home/kitchen-tech/best-rice-cooker-120015478.html?src=rss",
+        "title": "The best rice cooker for 2026",
+        "link": "https://www.engadget.com/home/kitchen-tech/best-rice-cooker-120015478.html?src=rss",
+        "published": "Fri, 02 Jan 2026 10:01:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>A great rice cooker can change the way you handle weeknight meals. Instead of watching the pot or dealing with uneven results, you get fluffy, consistent rice with almost no effort. Modern rice cookers can do a lot more than white rice, too. Many handle brown rice, oatmeal and grains, and some function like mini multi-cookers for soups or stews.<br /><br />With so many options available, the best rice cooker for you depends on how often you cook, how much counter space you have and which feat"
+    },
+    {
+        "id": "https://standardebooks.org/blog/public-domain-day-2026",
+        "title": "Standard Ebooks: Public Domain Day 2026 in Literature",
+        "link": "https://standardebooks.org/blog/public-domain-day-2026",
+        "published": "Fri, 02 Jan 2026 08:40:41 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46462702\">Comments</a>"
+    },
+    {
+        "id": "https://carette.xyz/posts/going_immutable_macos/",
+        "title": "Going immutable on macOS, using Nix-Darwin",
+        "link": "https://carette.xyz/posts/going_immutable_macos/",
+        "published": "Fri, 02 Jan 2026 08:42:34 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46462719\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/china-ai-chipmaker-biren-soars-in-hong-kong-debut-as-ipo-wave-builds/articleshow/126302712.cms",
+        "title": "China AI chipmaker Biren soars in Hong Kong debut as IPO wave builds",
+        "link": "https://economictimes.indiatimes.com/tech/technology/china-ai-chipmaker-biren-soars-in-hong-kong-debut-as-ipo-wave-builds/articleshow/126302712.cms",
+        "published": "Fri, 02 Jan 2026 14:30:43 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Shares of Chinese AI chip designer Shanghai Biren Technology closed up 76% in their Hong Kong \u2060debut on Friday, the financial hub's first listing of 2026."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/centre-clears-22-projects-under-electronics-components-pli-scheme/articleshow/126302794.cms",
+        "title": "Centre clears 22 projects under electronics components PLI scheme; Rs 41,863 crore investment expected",
+        "link": "https://economictimes.indiatimes.com/tech/technology/centre-clears-22-projects-under-electronics-components-pli-scheme/articleshow/126302794.cms",
+        "published": "Fri, 02 Jan 2026 13:04:49 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The government has approved 22 investment proposals under the Electronics Component Production-Linked Incentive (PLI) scheme, a move expected to attract investments worth Rs 41,863 crore."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/sapphire-foods-devyani-int-merger-kfc-pizza-hut-qsr-chains",
+        "title": "Sapphire Foods\u2013Devyani Int. merger to create single KFC, Pizza Hut franchise",
+        "link": "https://yourstory.com/2026/01/sapphire-foods-devyani-int-merger-kfc-pizza-hut-qsr-chains",
+        "published": "Fri, 02 Jan 2026 04:56:15 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The boards of Devyani International and Sapphire Foods approved a scheme of arrangement for the merger of SFIL with and into DIL, marking a strategic consolidation of the two companies."
+    },
+    {
+        "id": "https://inc42.com/buzz/agritech-startup-arya-ag-bags-80-mn-from-gef-capital-partners/",
+        "title": "Agritech Startup Arya.ag Bags $80 Mn From GEF Capital Partners",
+        "link": "https://inc42.com/buzz/agritech-startup-arya-ag-bags-80-mn-from-gef-capital-partners/",
+        "published": "Fri, 02 Jan 2026 10:03:09 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Agritech Startup Arya.ag Bags $80 Mn From GEF Capital Partners\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/01/ftr-4-1-1.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Agritech startup Arya.ag has raised $80.58 Mn (about INR 725 Cr) in its Series D round, in a mix of&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-juspay-rbi-cross-border-payment-aggregator-licence/",
+        "title": "Exclusive: Juspay to Apply for Payment Aggregator Cross-Border Licence With the RBI",
+        "link": "https://www.medianama.com/2026/01/223-juspay-rbi-cross-border-payment-aggregator-licence/",
+        "published": "Fri, 02 Jan 2026 09:35:43 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Payments technology firm Juspay is set to apply for the RBI\u2019s cross-border payment aggregator licence, according to regulatory filings.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-juspay-rbi-cross-border-payment-aggregator-licence/\">Exclusive: Juspay to Apply for Payment Aggregator Cross-Border Licence With the RBI</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
