📚 Auto-update: News data refreshed - 2026-01-02 11:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -36046,5 +36046,109 @@
         "published": "Fri, 02 Jan 2026 09:35:43 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Payments technology firm Juspay is set to apply for the RBI\u2019s cross-border payment aggregator licence, according to regulatory filings.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-juspay-rbi-cross-border-payment-aggregator-licence/\">Exclusive: Juspay to Apply for Payment Aggregator Cross-Border Licence With the RBI</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.theverge.com/tech/849740/punkt-mc03-secure-smartphone-made-in-germany",
+        "title": "Punkt\u2019s German-made MC03 smartphone comes to the US this spring",
+        "link": "https://www.theverge.com/tech/849740/punkt-mc03-secure-smartphone-made-in-germany",
+        "published": "2026-01-02T06:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Punkt, the Switzerland-based, privacy-focused phone maker, is trying the whole \"smartphone\" thing again. The MC03 improves on some of the disappointing features of its previous effort, the MC02, while maintaining its security focus. Likewise, its software still comes with a subscription fee: the first year is included free, but it's $12 per month after that. [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/851151/trump-phone-missed-another-release-date",
+        "title": "The Trump phone just missed another release date",
+        "link": "https://www.theverge.com/news/851151/trump-phone-missed-another-release-date",
+        "published": "2026-01-02T06:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Where's the Trump Phone? We're going to keep talking about it every week. We've reached out, as usual, to ask about the Trump Phone's whereabouts. As usual, we're still waiting for a response. In the meantime, it's missed yet another of its promised release dates. When we started writing about Trump Mobile regularly, it all [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/expired-tired-wired-protest-surveillance/",
+        "title": "How Protesters Became Content for the Cops",
+        "link": "https://www.wired.com/story/expired-tired-wired-protest-surveillance/",
+        "published": "Fri, 02 Jan 2026 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The tactics behind protest policing are changing\u2014from one of cooperation to intentional antagonism for political marketing purposes."
+    },
+    {
+        "id": "https://www.wired.com/story/track-fitness-stats-with-just-your-phone/",
+        "title": "You Can Track Plenty of Fitness Stats With Just Your Phone\u2014No Wearables Required",
+        "link": "https://www.wired.com/story/track-fitness-stats-with-just-your-phone/",
+        "published": "Fri, 02 Jan 2026 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "You can log your steps, track your sleep, and measure your progress toward your goals using your phone alone."
+    },
+    {
+        "id": "https://www.engadget.com/mobile/smartphones/minimal-phone-pioneer-punkt-is-back-with-a-new-privacy-focused-model-at-ces-110000705.html?src=rss",
+        "title": "Minimal phone pioneer Punkt is back with a new privacy-focused model at CES",
+        "link": "https://www.engadget.com/mobile/smartphones/minimal-phone-pioneer-punkt-is-back-with-a-new-privacy-focused-model-at-ces-110000705.html?src=rss",
+        "published": "Fri, 02 Jan 2026 11:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The Swiss minimal phone pioneer Punkt is back with another model, the MC03. The new handset continues Punkt's focus on privacy, security and digital minimalism.</p><p>If you've never seen Punkt's MP01 and MP02, the company's <a class=\"link\" href=\"https://www.punkt.ch/pages/the-history-of-mp01-mobile-phone\" target=\"_blank\">gorgeously minimal dumb phone line</a>, they're something to behold. (The MP01 is quite literally a museum piece, in New York\u2019s Museum of Modern Art.) Meanwhile, this new MC"
+    },
+    {
+        "id": "https://en.kaigaiiju.ch/episodes/matz2",
+        "title": "Matz 2/2: The trajectory of Ruby's growth, Open-Source Software today etc.",
+        "link": "https://en.kaigaiiju.ch/episodes/matz2",
+        "published": "Fri, 26 Dec 2025 17:07:09 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46393929\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-we-test-portable-power-stations/",
+        "title": "How we test portable power stations at ZDNET in 2026",
+        "link": "https://www.zdnet.com/article/how-we-test-portable-power-stations/",
+        "published": "Fri, 02 Jan 2026 11:00:39 GMT",
+        "source": "Latest news",
+        "summary": "We've tested over 100 portable power stations in recent years. Here's how we make sure they're worth recommending to you."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/deepseek-touts-new-training-method-as-china-pushes-ai-efficiency/articleshow/126304724.cms",
+        "title": "DeepSeek touts new training method as China pushes AI efficiency",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/deepseek-touts-new-training-method-as-china-pushes-ai-efficiency/articleshow/126304724.cms",
+        "published": "Fri, 02 Jan 2026 16:33:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "DeepSeek published a paper outlining a more efficient approach to developing AI, illustrating the Chinese artificial intelligence industry\u2019s effort to compete with the likes of OpenAI despite a lack of free access to Nvidia chips."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/deepinder-goyal-claims-gig-worker-protests-turned-violent-shares-video-evidence/articleshow/126303855.cms",
+        "title": "Deepinder Goyal claims gig worker protests turned violent, shares video evidence",
+        "link": "https://economictimes.indiatimes.com/tech/technology/deepinder-goyal-claims-gig-worker-protests-turned-violent-shares-video-evidence/articleshow/126303855.cms",
+        "published": "Fri, 02 Jan 2026 15:57:37 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Eternal CEO Deepinder Goyal said some protesters during the December strikes were not company delivery partners and shared videos to support his claim. He condemned violence and said most workers did not support the strike. The remarks follow his defence of 10-minute deliveries amid wider safety and labour concerns."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/new-years-eve-upi-payments-hit-rs-11-lakh-cr-as-online-card-spend-dips",
+        "title": "New Year\u2019s Eve UPI payments hit Rs 1.1 lakh Cr as online card spend dips",
+        "link": "https://yourstory.com/2026/01/new-years-eve-upi-payments-hit-rs-11-lakh-cr-as-online-card-spend-dips",
+        "published": "Fri, 02 Jan 2026 10:38:53 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "UPI transactions surged 17.02% to Rs 1.12 lakh crore on December 31, according to RBI's payments settlement data, up from Rs 93,147.85 crore on NYE last year."
+    },
+    {
+        "id": "https://inc42.com/buzz/delivery-platforms-log-record-festive-orders-despite-gig-workers-strike/",
+        "title": "Delivery Platforms Log Record Festive Orders Despite Gig Workers\u2019 Strike",
+        "link": "https://inc42.com/buzz/delivery-platforms-log-record-festive-orders-despite-gig-workers-strike/",
+        "published": "Fri, 02 Jan 2026 11:00:25 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Delivery Platforms Log Record Festive Orders Despite Gig Workers\u2019 Strike\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Gig-worker-strike-story-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The long-standing face-off between gig workers and quick commerce platforms like Blinkit, Instamart and Zepto came to a head in&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-grok-sexual-images-women-user-requests-x/",
+        "title": "Troubling Trend on X: Grok Responds To User Requests Asking It to Edit & Undress People in Images",
+        "link": "https://www.medianama.com/2026/01/223-grok-sexual-images-women-user-requests-x/",
+        "published": "Fri, 02 Jan 2026 11:06:32 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Grok's ability to generate non-consensual images in response to user requests has raised questions about platform liability, as the sexualised images are not merely circulating on X but produced by it.  </p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-grok-sexual-images-women-user-requests-x/\">Troubling Trend on X: Grok Responds To User Requests Asking It to Edit &amp; Undress People in Images</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-ups-yaksh-app-adds-ai-to-beat-policing-raises-privacy-risks/",
+        "title": "AI Policing Tools Like UP\u2019s YAKSH App Highlight India\u2019s Expanding Surveillance State",
+        "link": "https://www.medianama.com/2026/01/223-ups-yaksh-app-adds-ai-to-beat-policing-raises-privacy-risks/",
+        "published": "Fri, 02 Jan 2026 10:19:40 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>The new AI-powered app Yaksh identifies individuals using facial recognition tech and uses voice search to assist crime detection, helping the beat police to verify criminal backgrounds. </p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-ups-yaksh-app-adds-ai-to-beat-policing-raises-privacy-risks/\">AI Policing Tools Like UP\u2019s YAKSH App Highlight India\u2019s Expanding Surveillance State</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
