--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -36150,5 +36150,77 @@
         "published": "Fri, 02 Jan 2026 10:19:40 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>The new AI-powered app Yaksh identifies individuals using facial recognition tech and uses voice search to assist crime detection, helping the beat police to verify criminal backgrounds. </p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-ups-yaksh-app-adds-ai-to-beat-policing-raises-privacy-risks/\">AI Policing Tools Like UP\u2019s YAKSH App Highlight India\u2019s Expanding Surveillance State</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.wired.com/story/welcome-to-the-future-of-noise-canceling/",
+        "title": "Welcome to the Future of Noise Canceling",
+        "link": "https://www.wired.com/story/welcome-to-the-future-of-noise-canceling/",
+        "published": "Fri, 02 Jan 2026 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The next generation of noise reduction is currently being developed in R&amp;D labs around the world. Take a look at what's to come."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-running-shoes/",
+        "title": "Best Running Shoes, Tested and Reviewed (2026): Saucony, Nike, Hoka",
+        "link": "https://www.wired.com/gallery/best-running-shoes/",
+        "published": "Fri, 02 Jan 2026 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "We clocked thousands of test miles to bring you the best running shoes for every pace, ability, and running goal."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-meal-kit-services-1/",
+        "title": "10 Best Meal Delivery Services, Tested by an Ex-Restaurant Critic",
+        "link": "https://www.wired.com/gallery/best-meal-kit-services-1/",
+        "published": "Fri, 02 Jan 2026 11:34:00 +0000",
+        "source": "WIRED",
+        "summary": "Here are the best meal kits in 2026, from Martha Stewart\u2019s meal kit to the best meal delivery on a budget."
+    },
+    {
+        "id": "https://www.wired.com/story/heres-how-long-you-should-walk-every-day-to-prevent-back-pain/",
+        "title": "Here's How Long You Should Walk Every Day to Prevent Back Pain",
+        "link": "https://www.wired.com/story/heres-how-long-you-should-walk-every-day-to-prevent-back-pain/",
+        "published": "Fri, 02 Jan 2026 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Back pain is one of the most common chronic diseases in the world. Recent research reveals how much time you should spend walking on a daily basis to prevent it."
+    },
+    {
+        "id": "https://www.technologyreview.com/2026/01/02/1129409/will-douglas-heaven-el-estepario-siberiano-ed-atkins-laura-jean-mckay/",
+        "title": "3 things Will Douglas Heaven is into right now",
+        "link": "https://www.technologyreview.com/2026/01/02/1129409/will-douglas-heaven-el-estepario-siberiano-ed-atkins-laura-jean-mckay/",
+        "published": "Fri, 02 Jan 2026 11:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "The most amazing drummer on the internet My daughter introduced me to El Estepario Siberiano\u2019s YouTube channel a few months back, and I have been obsessed ever since. The Spanish drummer (real name: Jorge Garrido) posts videos of himself playing supercharged cover versions of popular tracks, hitting his drums with such jaw-dropping speed and technique&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2026/01/02/1129416/head-transplant-surgeon-sergio-canavero-future-job/",
+        "title": "Job titles of the future: Head-transplant surgeon",
+        "link": "https://www.technologyreview.com/2026/01/02/1129416/head-transplant-surgeon-sergio-canavero-future-job/",
+        "published": "Fri, 02 Jan 2026 11:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "The Italian neurosurgeon Sergio Canavero has been preparing for a surgery that might never happen. His idea? Swap a sick person\u2019s head\u2014or perhaps just the brain\u2014onto a younger, healthier body. Canavero caused a stir in 2017 when he announced that a team he advised in China had exchanged heads between two corpses. But he never&#8230;"
+    },
+    {
+        "id": "https://sgoel.dev/posts/10-years-of-personal-finances-in-plain-text-files/",
+        "title": "10 years of personal finances in plain text files",
+        "link": "https://sgoel.dev/posts/10-years-of-personal-finances-in-plain-text-files/",
+        "published": "Fri, 02 Jan 2026 11:07:51 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46463644\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/four-semiconductor-plants-in-india-to-begin-commercial-production-in-2026/articleshow/126305259.cms",
+        "title": "Four semiconductor plants in India to begin commercial production in 2026",
+        "link": "https://economictimes.indiatimes.com/tech/technology/four-semiconductor-plants-in-india-to-begin-commercial-production-in-2026/articleshow/126305259.cms",
+        "published": "Fri, 02 Jan 2026 17:01:52 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Union Minister for Electronics and IT Ashwini Vaishnaw announced on Friday that four companies will commence commercial manufacturing of semiconductor chips in 2026, marking a significant milestone in India's push for self-reliance in critical technology."
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-whatfix-fy25-results-revenue-crosses-500-crore/",
+        "title": "Exclusive: Whatfix Crosses Rs 500 Crore Revenue Mark in FY25, Raises 297 Crore From Warburg Pincus, SoftBank",
+        "link": "https://www.medianama.com/2026/01/223-whatfix-fy25-results-revenue-crosses-500-crore/",
+        "published": "Fri, 02 Jan 2026 12:07:41 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Whatfix crossed Rs 556.7 crore in revenue in FY25, posting 31% year-on-year growth while narrowing its net loss. Warburg Pincus increased its stake in the SaaS firm.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-whatfix-fy25-results-revenue-crosses-500-crore/\">Exclusive: Whatfix Crosses Rs 500 Crore Revenue Mark in FY25, Raises 297 Crore From Warburg Pincus, SoftBank</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
