--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -36222,5 +36222,125 @@
         "published": "Fri, 02 Jan 2026 12:07:41 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Whatfix crossed Rs 556.7 crore in revenue in FY25, posting 31% year-on-year growth while narrowing its net loss. Warburg Pincus increased its stake in the SaaS firm.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-whatfix-fy25-results-revenue-crosses-500-crore/\">Exclusive: Whatfix Crosses Rs 500 Crore Revenue Mark in FY25, Raises 297 Crore From Warburg Pincus, SoftBank</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/02/clicks-debuts-its-own-take-on-the-blackberry-smartphone-plus-a-79-snap-on-mobile-keyboard/",
+        "title": "Clicks debuts its own take on the BlackBerry smartphone, plus a $79 snap-on mobile keyboard",
+        "link": "https://techcrunch.com/2026/01/02/clicks-debuts-its-own-take-on-the-blackberry-smartphone-plus-a-79-snap-on-mobile-keyboard/",
+        "published": "Fri, 02 Jan 2026 13:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "The company behind the add-on mobile keyboards with physical buttons is now doing its own phone."
+    },
+    {
+        "id": "https://www.theverge.com/news/852628/lg-gram-pro-17-16-laptop-2026-ces",
+        "title": "LG announces the &#8216;world\u2019s lightest 17-inch RTX laptop&#8217;",
+        "link": "https://www.theverge.com/news/852628/lg-gram-pro-17-16-laptop-2026-ces",
+        "published": "2026-01-02T08:03:59-05:00",
+        "source": "The Verge",
+        "summary": "LG is teasing the 2026 Gram Pro laptops that will be fully unveiled at CES, including what the company claims is the \"world's lightest 17-inch RTX laptop.\" The LG Gram Pro 17 (17Z90UR) and Gram Pro 16 (16Z90U) will introduce a new ultralight \"Aerominum material\" developed by LG that aims to reduce a laptop's weight [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/850879/fender-mix-wireless-headphones-bluetooth-modular-replaceable-battery",
+        "title": "Fender\u2019s first wireless headphones have a long-lasting, replaceable battery",
+        "link": "https://www.theverge.com/news/850879/fender-mix-wireless-headphones-bluetooth-modular-replaceable-battery",
+        "published": "2026-01-02T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Fender Audio, the consumer electronics brand owned by the famous guitar maker, has announced its first pair of wireless headphones at CES 2026. What sets the Mix headphones apart from the competition are impressive battery life, a modular design that allows the ear cups and headband to be swapped to alternate colors, and a focus [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/850912/fender-audio-elie-bluetooth-portable-wireless-speakers-four-inputs-simultaneous",
+        "title": "Fender\u2019s new Bluetooth speakers can play audio from four sources simultaneously",
+        "link": "https://www.theverge.com/gadgets/850912/fender-audio-elie-bluetooth-portable-wireless-speakers-four-inputs-simultaneous",
+        "published": "2026-01-02T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Fender, the guitar maker also known for its amps and speakers, has a new consumer electronics brand called Fender Audio making its debut at CES 2026. In addition to a new pair of wireless headphones, Fender Audio has announced a pair of portable Bluetooth speakers called ELIE, which is short for \"Extremely Loud Infinitely Expressive.\" [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/851165/ces-2026-what-to-expect",
+        "title": "What to expect at CES 2026",
+        "link": "https://www.theverge.com/tech/851165/ces-2026-what-to-expect",
+        "published": "2026-01-02T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "The biggest tech show of the year kicks off next week, as some of the industry's top players show up to Las Vegas for CES 2026. We'll be there to see all the new product demos we can and to bring you the most exciting news from the show. Follow our coverage for a preview [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/851298/clicks-communicator-phone-blackberry-keyboard",
+        "title": "The Clicks Communicator is a Blackberry for your phone",
+        "link": "https://www.theverge.com/tech/851298/clicks-communicator-phone-blackberry-keyboard",
+        "published": "2026-01-02T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "You ever find yourself thinking, \"I wish my phone had a phone?\" Good news, friend. Clicks - the company behind the QWERTY keyboard case for your iPhone - has just the thing: the Clicks Communicator. It's intended as a kind of complement to your smartphone for when you just want to stay in touch without [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/audio/speakers/fender-audio-will-introduce-a-new-line-of-bluetooth-speakers-and-headphones-at-ces-130041696.html?src=rss",
+        "title": "Fender Audio will introduce a new line of Bluetooth speakers and headphones at CES",
+        "link": "https://www.engadget.com/audio/speakers/fender-audio-will-introduce-a-new-line-of-bluetooth-speakers-and-headphones-at-ces-130041696.html?src=rss",
+        "published": "Fri, 02 Jan 2026 13:00:41 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Fender Audio, the consumer electronics arm of the instrument maker, will introduce two flagship audio products at this year's CES in Las Vegas. These products were made under a licensing agreement with Singapore-based company RiffSound.</p>\n<p>First up is a line of Bluetooth speakers dubbed the ELIE (Extremely Loud Infinitely Expressive). The lineup includes two models, the E6 and E12. The speakers leverage a combination of DSP and system-on-a-chip processing, which Fender says can deliver mo"
+    },
+    {
+        "id": "https://www.engadget.com/computing/how-to-watch-lenovos-tech-world-event-at-ces-2026-130004053.html?src=rss",
+        "title": "How to watch Lenovo's Tech World event at CES 2026",
+        "link": "https://www.engadget.com/computing/how-to-watch-lenovos-tech-world-event-at-ces-2026-130004053.html?src=rss",
+        "published": "Fri, 02 Jan 2026 13:00:04 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>It's been known for months now that technology giant Lenovo is hosting its Tech World event at Sphere in Las Vegas during <a href=\"https://www.engadget.com/big-tech/ces-2026-what-to-expect-from-techs-biggest-conference-in-january-120000369.html\"><ins>CES week</ins></a>. Like many other tech conglomerates, the world's largest PC manufacturer by units shipped will put its main focus on AI. <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=59bdf74a-dd5e-49bf-af3d-ef9"
+    },
+    {
+        "id": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-121544371.html?src=rss",
+        "title": "The Morning After: Instagram boss says \u2018more practical to fingerprint real media than fake media\u2019",
+        "link": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-121544371.html?src=rss",
+        "published": "Fri, 02 Jan 2026 12:15:44 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Instagram\u2019s top exec Adam Mosseri expects AI content to overtake non-AI imagery and discussed the implications for the platform and users.</p>\n<p>Mosseri <a href=\"https://www.engadget.com/social-media/instagram-chief-ai-is-so-ubiquitous-it-will-be-more-practical-to-fingerprint-real-media-than-fake-media-202620080.html\">shared his thoughts</a> on broader trends he expects to shape Instagram in 2026. \u201cEverything that made creators matter \u2014 the ability to be real, to connect, to have a voice tha"
+    },
+    {
+        "id": "https://github.com/j-brooke/FracturedJson/wiki",
+        "title": "FracturedJson",
+        "link": "https://github.com/j-brooke/FracturedJson/wiki",
+        "published": "Fri, 02 Jan 2026 12:46:31 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46464235\">Comments</a>"
+    },
+    {
+        "id": "https://lalitm.com/post/one-number-i-trust/",
+        "title": "One Number I Trust: Plain-Text Accounting for a Multi-Currency Household",
+        "link": "https://lalitm.com/post/one-number-i-trust/",
+        "published": "Fri, 02 Jan 2026 10:25:11 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46463407\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/ai-agents-primitive-reinforcement-learning-complex-memory/",
+        "title": "True agentic AI is years away - here's why and how we get there",
+        "link": "https://www.zdnet.com/article/ai-agents-primitive-reinforcement-learning-complex-memory/",
+        "published": "Fri, 02 Jan 2026 13:13:28 GMT",
+        "source": "Latest news",
+        "summary": "Today's AI agents are a primitive approximation of what agents are meant to be. True agentic AI requires serious advances in reinforcement learning and complex memory."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/aravind-srinivas-perplexity-local-ai-data-centre-threat",
+        "title": "Aravind Srinivas: Why On-Device AI Could Kill Centralised Data Centres",
+        "link": "https://yourstory.com/2026/01/aravind-srinivas-perplexity-local-ai-data-centre-threat",
+        "published": "Fri, 02 Jan 2026 09:32:10 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The biggest disruption to the global data centre industry may not come from faster chips or larger server farms, but from intelligence that never"
+    },
+    {
+        "id": "https://yourstory.com/2026/01/agritech-startup-aryaag-raises-725-crore-series-d-funding",
+        "title": "Agritech startup Arya.ag raises Rs 725 Cr in a Series D funding",
+        "link": "https://yourstory.com/2026/01/agritech-startup-aryaag-raises-725-crore-series-d-funding",
+        "published": "Fri, 02 Jan 2026 13:20:19 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Arya.ag will use the new capital to deepen engagement with farmers and farmer producer organisations, promote climate-smart practices, and strengthen control over post-harvest losses at the farm gate."
+    },
+    {
+        "id": "https://inc42.com/buzz/centre-clears-inr-41863-cr-projects-under-pli-scheme-for-electronics-components/",
+        "title": "Centre Clears INR 41,863 Cr Projects Under PLI Scheme For Electronics Components",
+        "link": "https://inc42.com/buzz/centre-clears-inr-41863-cr-projects-under-pli-scheme-for-electronics-components/",
+        "published": "Fri, 02 Jan 2026 12:46:25 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Govt Extends Electronics Manufacturing Scheme Application Deadline Till September\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/07/electronics-manufacturing-india-1-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The central government has approved 22 new projects under the Electronics Component Manufacturing Scheme (ECMS), clearing investments worth INR 41,863&#82"
     }
 ]
